--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  //"Kestrel": {
+  //  "EndPoints": {
+  //    "Http": {
+  //      "Url": "http://+:443"
+  //    }
+  //  }
+  //},
+  "AllowedHosts": "*"
 }
